python/testData/quickFixes/PyMarkDirectoryAsSourceRootQuickFixTest/mysrc/foo/abc_no_src.py
from <error descr="Unresolved reference 'qwejfknqweklfnjqlkjwnef'">qwejfknqweklfnjqlkjwnef</error>.qwe import <error descr="Unresolved reference 'a_function'">a_function</error>